--- a/package.json
+++ b/package.json
@@ -30,20 +30,21 @@
     "@coreui/react": "^3.0.3",
     "@coreui/react-chartjs": "^1.0.0",
     "@coreui/utils": "^1.3.1",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-redux": "7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "4.0.5",
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0"
+    "redux": "4.0.5"
   },
   "devDependencies": {
     "react-scripts": "^3.4.1"
