--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-counter-input": "^0.2.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-redux": "7.2.0",
