--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.1",
     "@coreui/chartjs": "^2.0.0",
     "@coreui/coreui": "^3.2.2",
     "@coreui/icons": "2.0.0-beta.4",
