--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-counter-input": "^0.2.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-redux": "7.2.0",
